# inspirational-quotes

./: pyproject.toml
inspirational_quotes/: scrape.py
inspirational_quotes.egg-info/: PKG-INFO  SOURCES.txt
inspirational_quotes/data/: quotes.csv
tests/: test_inspirational_quotes.py
